--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                                         <a class="nav-link" aria-current="page" href="#propos">à propos</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="#postule">postule</a>
+                                        <a class="nav-link" aria-current="page" href="#postule">postuler</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" aria-current="page" href="#contact">contact</a>
@@ -82,24 +82,21 @@
             <a href="https://twitter.com/?lang=fr"><i class="fab fa-twitter"></i></a>
             <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram">
             </i></a>
-            <a href="https://play.google.com/store/apps/details?id=com.snapchat.android&hl=fr&gl=US"><i class="fab fa-snapchat-ghost">
-            </i></a>
-            <a href="https://www.whatsapp.com/?lang=fr"><i class="fab fa-whatsapp"></i></a>
-            <h2 class="text-center" id="mannequins">mannequins</h2>
+            <a href="https://www.youtube.com/?hl=FR"><i class="fa-brands fa-youtube"></i></a>
         </div>
 
         <!-- CONTAINER MAIN -->
         <div class="container">
-
+            <h2 class="text-center" id="mannequins">mannequins</h2>
             <!-- SECTION 1 -->
-            <section class=" section1 m-auto">
+            <section class=" section1">
                 <div class="row col-12 m-auto">
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto un">
                     <div class="col-6 col-md-6 col-sm-12 rapha">
-                        <div class="m-auto ">
+                        <div class="m-auto">
                             <h3 class="m-5 text-center fs-1">Raphaëlle</h3>
                             <p>Taille : 184cm</p>
                             <p>Poitrine : 80 cm</p>
@@ -111,20 +108,20 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 img-container">
-                        <img src="img/rapha45.jpg" alt="" class="img-fluid img">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                        <img src="img/rapha45.jpg" alt="" class="img-fluid img ">
                     </div>
                 </div>
             </section>
             <!-- FIN SECTION 1 -->
 
             <!-- SECTION 2 -->
-            <section class=" section2 m-auto">
+            <section class=" section2">
                 <div class="row col-12 m-auto">
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 lamia">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Lamia</h3>
@@ -138,7 +135,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/lamia1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -151,7 +148,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 justine">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Justine</h3>
@@ -165,8 +162,8 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
-                        <img src="img/just1.jpg" alt="" class="">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                        <img src="img/just1.jpg" alt="" class="img img-fluid">
                     </div>
                 </div>
             </section>
@@ -178,13 +175,12 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 patrick">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Patrick</h3>
                             <p>Taille : 197cm</p>
                             <p>Poitrine : 97 cm</p>
-
                             <p>Hanches 78 cm</p>
                             <p>Cheveux : Noirs</p>
                             <p>Yeux : Revolvers</p>
@@ -192,7 +188,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/patrick1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -205,7 +201,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 barbara">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Barbara</h3>
@@ -219,7 +215,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/barbara1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -232,7 +228,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 latifa">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Latifa</h3>
@@ -246,7 +242,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/lat.jpg" alt="" class="">
                     </div>
                 </div>
@@ -259,7 +255,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 melodie">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Mélodie</h3>
@@ -273,7 +269,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/mel3.jpg" alt="" class="">
                     </div>
                 </div>
@@ -286,7 +282,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row d-flex">
+                <div class="row m-auto">
                     <div class="col-6 col-md-6 col-sm-12 daniele">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Daniele</h3>
@@ -299,7 +295,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 p-0">
                         <img src="img/dan.jpg" alt="" class="">
                     </div>
                 </div>
@@ -308,18 +304,18 @@
 
             <!--  SECTION 9 -->
             <section class="section9">
-                <div class="row col-12 m-auto d-flex">
-                    <h2 class="text-center" id="postule">à propos</h2>
-                    <div class="col-lg-6 col-md-6 col-sm-12 ">
-                        <div class="propos">
-                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                <div class="row col-12 m-auto">
+                    <h2 class="text-center" id="propos">à propos</h2>
+                    <div class="col-lg-6 col-md-6 col-sm-12 p-0">
+                        <div class="propos  w-100 m-auto">
+                            <P class="paragraphe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis!</P>
-                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                            <P class="paragraphe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque!</P>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
+                    <div class="col-lg-6 col-md-6 col-sm-12 p-0">
+                        <img src="img/Paris.jpg" alt="" class="img img-fluid">
                     </div>
                 </div>
             </section>
@@ -328,17 +324,17 @@
             <!--  SECTION 10 -->
             <section class="row col-12 m-auto section10">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h2 class="text-center">postuler à l'agence mariam</h2>
+                    <h2 class="text-center" id="postule">postuler à l'agence mariam</h2>
                     <h3>critères</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
                     <h3>conseil</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
                     <h3>avertissement</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
-                    <div class="book">
-                        <h3 id="book">envoyer votre book</h3>
-                        <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
-                        <p class="m-3">Veuillez soumettre vos photos en les envoyant à : m.ouedaogo7526@gmail.com</p>
+                    <div>
+                        <h3>envoyer votre book</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
+                        <p>Veuillez soumettre vos photos en les envoyant à : m.ouedaogo7526@gmail.com</p>
                         <h3 id="appels">
                             appels
                         </h3>
@@ -350,36 +346,46 @@
             <!--  FIN SECTION 10 -->
 
             <!--  FIN SECTION 11 -->
-            <div class="row col-12 section11 d-flex">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <div class="contact m-auto">
-                        <h2 class="text-center">contactez nous</h2>
-                        <h3>adressse</h3>
-                        <p class="text-center">Agence Mariam</p>
-                        <P class="text-center">Paris</P>
+            <section class=" section11">
+
+                <div class="row col-12 d-flex m-auto">
+                    <h2 class="text-center" id="contact">contactez nous</h2>
+                    <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
+                        <div class="contact w-100">
+                            <h3>adressse</h3>
+                            <P>Agence Mariam</P>
+                            <p>Paris</p>
+                        </div>
                     </div>
-                    <div class="contact m-auto">
-                        <h3>pour plus d'infos</h3>
-                        <P class="text-center">+33 7 53 32 95 26</P>
-                        <p class="text-center">m.ouedaogo7526@gmail.com</p>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
+                        <div class="contact m-auto">
+                            <h3 class="">pour plus d'infos</h3>
+                            <P>+33 7 53 32 95 26</P>
+                            <p><a href="#">m.ouedaogo7526@gmail.com</a></p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 d-flex m-auto column">
-                    <div class="contact ">
-                        <h3 class="para ">réserver</h3>
-                        <P class="text-center">+33 7 53 32 95 26</P>
-                        <p class="text-center">m.ouedaogo7526@gmail.com</p>
+                <div class="row col-12 d-flex moi m-auto">
+                    <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
+                        <div class="contact m-auto">
+                            <h3>réserver</h3>
+                            <P>+33 7 53 32 95 26</P>
+                            <p>m.ouedaogo7526@gmail.com</p>
+                        </div>
                     </div>
-                    <div class="contact ">
-                        <h3 class="para">Devenir mannequin</h3>
-                        <P class="infos text-center">Pour postuler</P>
-                        <p class="infos text-center"><a href="#">Cliquer ici</a></p>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="contact">
+                            <h3>Devenir mannequin</h3>
+                            <P>Pour postuler</P>
+                            <p><a href="#">Cliquer ici</a></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-lg-12 col-md-12 col-sm-12 d-flex section ">
                     <div class="newletter m-auto text-dark">
-                        <h3>S'abonner à notre newletter</h3>
+                        <h3 class="text-center">S'abonner à notre newletter</h3>
                         <p class="text-center">Pour recevoir les dernières nouvelles, éditoriaux, campagnes et plus
                         </p>
                         <form class="m-auto text-center mb-5">
@@ -391,7 +397,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </section>
             <!--  FIN SECTION 11 -->
 
         </div>
