--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,6 @@
 
             <!--  FIN SECTION 11 -->
             <section class=" section11">
-
                 <div class="row col-12 d-flex m-auto">
                     <h2 class="text-center" id="contact">contactez nous</h2>
                     <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
@@ -360,7 +359,7 @@
 
                     <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
                         <div class="contact m-auto">
-                            <h3 class="">pour plus d'infos</h3>
+                            <h3>pour plus d'infos</h3>
                             <P>+33 7 53 32 95 26</P>
                             <p><a href="#">m.ouedaogo7526@gmail.com</a></p>
                         </div>
@@ -385,7 +384,7 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 d-flex section ">
                     <div class="newletter m-auto text-dark">
-                        <h3 class="text-center">S'abonner à notre newletter</h3>
+                        <h3 class="text-center abonne">S'abonner à notre newletter</h3>
                         <p class="text-center">Pour recevoir les dernières nouvelles, éditoriaux, campagnes et plus
                         </p>
                         <form class="m-auto text-center mb-5">
