--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto un">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 rapha">
                         <div class="m-auto">
                             <h3 class="m-5 text-center fs-1">Raphaëlle</h3>
@@ -108,8 +108,8 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
-                        <img src="img/rapha45.jpg" alt="" class="img-fluid img ">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
+                        <img src="img/rapha45.jpg" alt="" class=" img ">
                     </div>
                 </div>
             </section>
@@ -121,7 +121,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 lamia">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Lamia</h3>
@@ -135,7 +135,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/lamia1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 justine">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Justine</h3>
@@ -162,7 +162,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/just1.jpg" alt="" class="img img-fluid">
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 patrick">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Patrick</h3>
@@ -188,7 +188,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/patrick1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 barbara">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Barbara</h3>
@@ -215,7 +215,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/barbara1.jpg" alt="" class="">
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 latifa">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Latifa</h3>
@@ -242,7 +242,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/lat.jpg" alt="" class="">
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 melodie">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Mélodie</h3>
@@ -269,7 +269,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/mel3.jpg" alt="" class="">
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                     <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
-                <div class="row m-auto">
+                <div class="row m-auto d-flex">
                     <div class="col-6 col-md-6 col-sm-12 daniele">
                         <div class="m-auto ">
                             <h3 class="m-5 text-center fs-1">Daniele</h3>
@@ -295,7 +295,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12 p-0">
+                    <div class="col-6 col-md-6 col-sm-12 p-0 image">
                         <img src="img/dan.jpg" alt="" class="">
                     </div>
                 </div>
@@ -391,7 +391,7 @@
                             <label for="email" class="ml-5 text-start">E-mail <br>
                                 <input type="email" id="email" name="email" class="input border-1 border-bottom">
                             </label>
-                            <button class="text-white btn bg-black me-md-2 mb-3" type="button">Envoyer</button>
+                            <button class="text-white btn bg-black me-md-2 mb-3" type="button">Désactivé</button>
 
                         </form>
                     </div>
